Shrink search window (not null necessarily, but do shrink it)
Better thread utilization: keep all threads busy through end of minimax compute
	(including last move).
More search time if first move's eval goes down.  Finish the level. ... at
     least try to find a move that doesn't go down.  Especially if first move
     evals to -checkmate.

Version 1.2:
Refactored Pv into its own (3) classes.
Refactored MoveT class.
Bugfix: fixed csOO + csFIDE-style strings never showing check(mate).

Version 1.1:
Build improvements: use Git for version control, cmake for building
Bugfix: uiXboard: handle 0 increment and 0 moves per timecontrol properly
Bugfix: uiUci: fix 'searchMoves' parameter handling (untested)
Cleanup: use C99 bool where I can.  Also cleanup no-move detection.
Bugfix: must use llabs() instead of abs() for handling time.
Reimplemented transposition table (presumably a better one), and added hooks
        for controlling it to uiUci/uiXboard.
Use a "smarter" resign strategy (try not to resign too early)
Add command-line option to override default UI.
uiNcurses: make cursor look nicer on Linux console; fix UIBarfString() backspace
Bugfix: fix goalTime calc for ICS, and when increment larger than starting time
Refactored castling and make-move code.
Converted most files to .cpp and made buildable under clang++.  (~5% speedup)
Refactored Pieces into their own class. (~1.2% slowdown)
Bugfix: fixed futility check (potentialImprovement() looked at wrong player's
        pieces)
Refactored MoveList (and removed MLIST_MAX_MOVES limit) (7% slowdown).
Refactored Board and Position (~3% slowdown, but fixed a minor biasDraw issue).
Removed MAX_NUM_PROCS limitation (except for basic user input validation).
Refactored Clock API + made PerMoveTime() take total clock time into account.
Bugfix: we were jumping between 2 mating positions (because nothing better was
        in the transposition table) until the opponent could draw.