@@ -33,8 +33,9 @@ More search time if first move's eval goes down.  Finish the level. ... at
 
 Version 1.2:
 Refactored Pv into its own (3) classes.
-Refactored MoveT class.
+Refactored MoveT struct (added methods)
 Bugfix: fixed csOO + csFIDE-style strings never showing check(mate).
+Refactored Trans(Position)Table into a c++ class.
 
 Version 1.1:
 Build improvements: use Git for version control, cmake for building
